# cengine_2

./: .gitignore  CMakeLists.txt  main.c
assets/shaders/: simple.frag  simple.vert
include/ode/: Makefile
libs/: libEGL.lib  libGLESv2.lib  vulkan-1.dll.lib
src/: common.c  common.h  paths.h  stb_impl.c  stbi_impl.c
src/engine/: assets.c  assets.h  bounding_box.c  bounding_box.h  draw_system.c  draw_system.h  engine.c  engine.h  input.c  input.h  input_old.c  input_old.h  transform.c  transform.h  window.c  window.h
src/engine/assets/: shader.c  shader.h  simple_material.c  simple_material.h  simple_mesh.c  simple_mesh.h  static_object.c  static_object.h  texture.c  texture.h
src/engine/utils/: fps_counter.c  fps_counter.h  model_loader.c  model_loader.h
src/jobs/: job.c  job.h  job_system.c  job_system.h  job_worker.c  job_worker.h  jobs.h
src/renderer/: frame_packet.c  frame_packet.h  render_object.c  render_object.h  renderer.c  renderer.h  renderer_object.c  renderer_object.h  renderer_scene.c  renderer_scene.h
src/renderer/visibility/: visibility.c  visibility.h  visibility_object.c  visibility_object.h
src/simulation/: frame_packet_generator.c  frame_packet_generator.h  sim.c  sim.h  sim_object.c  sim_object.h
src/simulation/logic/: logic.c  logic.h
src/simulation/network/: network.c  network.h
src/simulation/physics/: physics.c  physics.h
